...

    <string name="add_to_favorites_podcasts">Add to favorites Podcasts</string>

    <string name="register_and_login" translate="false">Register and Login</string>
    <string name="register_and_login_footer" translate="false">You can save and sync your subscription and history on all your devices</string>
    <string name="register" translate="false">Register</string>
    <string name="login" translate="false">Login</string>
    <string name="authentication" translatable="false"> Authentication </string>

    <string name="registerButton" translate="false">Sign Up</string>
    <string name="alreadHaveAccount" translate="false">Already have an account? Login</string>
    <string name="loginButton" translate="false">Login</string>
    <string name="DontHaveAccount" translate="false">Don\'t have an account? Sign Up</string>
    <string name="fullName" translate="false">FULL NAME</string>
...

    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="forgot_password_msg" translatable="false">Please enter your registered email, in order to send you the password reset instructions</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false">Back</string>
    <string name="proceed" translatable="false">Proceed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="viewComments">View Comments</string>
    <string name="submit">submit</string>

    <string name="title_activity_register_and_login">Authentication</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_forgot_password">Reset Password</string>
    <string name="title_activity_register" translatable="false"> Register </string>

    <string name="require_fulll_name" translatable="false">Full Name is required!</string>
    <string name="require_new_name" translatable="false">Cannot update to the same current name</string>
    <string name="email_bad_format" translatable="false">Wrong email format!. Your email should contain "@"</string>
...
