<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.danoeh.antennapod.fragment.EditProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/register_and_login_icon" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/edit_profile_image"
                android:layout_toRightOf="@+id/edit_profile_image"
                android:text="Line 1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="82dp"
                android:layout_toEndOf="@+id/edit_profile_image"
                android:layout_toRightOf="@+id/edit_profile_image"
                android:text="Line 2"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/profile_right_arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/profile_email"
                android:layout_marginStart="-18dp"
                android:layout_marginLeft="-18dp"
                android:layout_marginTop="26dp"
                android:layout_toEndOf="@+id/edit_profile_image"
                android:layout_toRightOf="@+id/edit_profile_image"
                android:src="@drawable/right_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_email"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_toEndOf="@+id/profile_right_arrow"
                android:layout_toRightOf="@+id/profile_right_arrow"
                android:fontFamily="cursive"
                android:text="Change your profile picture !"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/screen_percentage_10"
            android:text="@string/fullName"

            />

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/password"
            android:layout_marginTop="@dimen/screen_percentage_10"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button_void"
            android:layout_gravity="right"
            android:text="@string/proceed"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="top|left"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
