...
                    android:layout_height="172dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/register_and_login_icon"/>

                <Button
                    android:id="@+id/profile_register_and_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/rounded_button_fill"
                    android:paddingHorizontal="30dp"
                    android:text="@string/authentication"
...
                    android:layout_marginBottom="30dp"
                    android:text="Line 2"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/profile_option_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:scrollbars="vertical">

...
